# Koi

./: .gitignore  CRITICAL_FIXES_REPORT.md  Cargo.toml  LANGUAGE_EXTENSION_ROADMAP.md  LICENSE  OPTIMIZATION_REPORT.md  Proyecto2_enunciado_compiladores.md  README.md  debug_adrp.s  debug_adrp2.s  debug_adrp3.s  debug_ldr.s  fib  koi_test  koi_test2  koi_test3  output.s  quicksort  test_fib
.github/workflows/: release.yml
benchmarks/: BENCHMARK_REPORT.md  README.md  koi_build.sh  output.s  plot_results.py  run_benchmarks.sh
benchmarks/carp/: fib.carp  lambda_map.carp  matrix_sum.carp  quicksort.carp
benchmarks/go/: fib.go  lambda_map.go  matrix_sum.go  quicksort.go
benchmarks/koi/: fib.koi  lambda_map.koi  matrix_sum.koi  quicksort.koi
benchmarks/results/: benchmarks.csv  fib_go_compile.json  fib_go_exec.json  fib_koi_compile.json  fib_koi_exec.json  fib_rust_compile.json  fib_rust_exec.json  lambda_map_go_compile.json  lambda_map_go_exec.json  lambda_map_koi_compile.json  lambda_map_koi_exec.json  lambda_map_rust_compile.json  lambda_map_rust_exec.json  matrix_sum_go_compile.json  matrix_sum_go_exec.json  matrix_sum_koi_compile.json  matrix_sum_koi_exec.json  matrix_sum_rust_compile.json  (+7 more)
docs/: ARQUITECTURA.md  BENCHMARKS.md  BUILD.md  COMPILER_INTERFACE.md  FEATURES.md  TESTS.md
koi-assembly/: Cargo.toml
koi-assembly/src/: codegen.rs  ir_parser.rs  lib.rs  optimizer.rs  register_allocator.rs
koi-assembly/tests/: backend_tests.rs
koi-ir/: Cargo.toml
koi-ir/src/: ast.rs  builtins.rs  inference.rs  ir.rs  ir_generator.rs  lambda_lifter.rs  main.rs  monomorphizer.rs  pipeline.rs  types.rs  unification.rs
(+37 files in other folders)
