[package]
name = "koi-assembly"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Test suite lives in ../test/test-koi-assembly/ (see koi-ast's Cargo.toml for
# the same convention). Each entry is its own integration-test binary linked
# against the koi-assembly lib target.
[[test]]
name = "pipeline_cli_tests"
path = "../test/test-koi-assembly/pipeline_cli_tests.rs"

[[test]]
name = "backend_tests"
path = "../test/test-koi-assembly/backend_tests.rs"
