[package]
name = "koi-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Test suite lives in ../test/test-koi-ir/ (see koi-ast's Cargo.toml for the
# same convention). Each entry is its own integration-test binary linked
# against the koi-ir lib target.
[[test]]
name = "types_tests"
path = "../test/test-koi-ir/types_tests.rs"

[[test]]
name = "unification_tests"
path = "../test/test-koi-ir/unification_tests.rs"

[[test]]
name = "inference_tests"
path = "../test/test-koi-ir/inference_tests.rs"

[[test]]
name = "monomorphizer_tests"
path = "../test/test-koi-ir/monomorphizer_tests.rs"

[[test]]
name = "lambda_lifter_tests"
path = "../test/test-koi-ir/lambda_lifter_tests.rs"

[[test]]
name = "ir_generator_tests"
path = "../test/test-koi-ir/ir_generator_tests.rs"

[[test]]
name = "pipeline_tests"
path = "../test/test-koi-ir/pipeline_tests.rs"

[[test]]
name = "cli_tests"
path = "../test/test-koi-ir/cli_tests.rs"
